fixed overflow bug on firefox

--- a/_sass/main-items.scss
+++ b/_sass/main-items.scss
@@ -389,6 +389,7 @@ a.btn {
 
 main {
   grid-area: 3 / 1 / 4 / 13;
+  width: 100%;
 }
 
 .ooo__grid_el {
